# klee-native

./: build.sh
remill/: CMakeLists.txt  cscope.files
remill/remill/Arch/: Instruction.h
remill/remill/BC/: Lifter.cpp  Lifter.h  Util.cpp
remill/scripts/: build.sh
remill/tools/: CMakeLists.txt
remill/tools/klee/: CMakeLists.txt  README.md  TODO.txt
remill/tools/klee/include/klee/: ExecutionState.h  Expr.h  Interpreter.h  Statistics.h
remill/tools/klee/include/klee/Config/: Version.h  config.h
remill/tools/klee/include/klee/Internal/Module/: InstructionInfoTable.h  KModule.h
remill/tools/klee/include/klee/util/: BitArray.h
remill/tools/klee/lib/Basic/: CmdLineOptions.cpp  KTest.cpp  Statistics.cpp
remill/tools/klee/lib/Core/: AddressSpace.cpp  Continuation.cpp  Continuation.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorTimers.cpp  ExecutorUtil.cpp  Memory.cpp  Memory.h  MemoryManager.cpp  MergeHandler.cpp  ObjectHolder.h  PreLifter.cpp  PreLifter.h  SeedInfo.cpp  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  StatsTracker.h  UserSearcher.cpp  out
remill/tools/klee/lib/Module/: CMakeLists.txt  Checks.cpp  InstructionInfoTable.cpp  IntrinsicCleaner.cpp  KModule.cpp  ModuleUtil.cpp  Optimize.cpp
remill/tools/klee/lib/Native/: CMakeLists.txt  Execute.cpp  Snapshot.cpp
remill/tools/klee/lib/Native/Arch/: Arch.cpp  Arch.h  BitCodeCache.cpp  BitCodeCache.h  TraceManager.cpp  TraceManager.h
remill/tools/klee/lib/Native/Arch/AArch64/: Log.cpp  Snapshot.cpp
remill/tools/klee/lib/Native/Arch/X86/: Log.cpp  Snapshot.cpp
remill/tools/klee/lib/Native/Memory/: AddressSpace.cpp  AddressSpace.h  AllocList.cpp  AllocList.h  MappedRange.cpp  MappedRange.h  PolicyHandler.cpp  PolicyHandler.h  Snapshot.cpp  Snapshot.h  Snapshot.proto
remill/tools/klee/lib/Native/Util/: AreaAllocator.cpp  AreaAllocator.h  Compiler.h  Hash.h  ZoneAllocator.cpp  ZoneAllocator.h
remill/tools/klee/lib/Native/Workspace/: Workspace.cpp  Workspace.h
remill/tools/klee/lib/Solver/: STPSolver.cpp  Z3Builder.cpp
remill/tools/klee/lib/Support/: MemoryUsage.cpp
remill/tools/klee/runtime/: CMakeLists.txt  NOTES  intercepts.S  intercepts.c  intercepts.inc  linux_aarch64.cpp  linux_amd64.cpp  linux_amd64_avx.cpp  linux_amd64_avx512.cpp  linux_x86.cpp  linux_x86_avx.cpp
remill/tools/klee/runtime/FreeStanding/: FreeStanding.cpp  memcmp.c  memcpy.c  memmove.c  memset.c
remill/tools/klee/runtime/Intrinsic/: Intrinsics.cpp  klee_choose.c  klee_div_zero_check.c  klee_int.c  klee_overshift_check.c  klee_range.c
remill/tools/klee/runtime/Native/: Intrinsics.h  Memory.cpp  Task.cpp  Task.h
remill/tools/klee/runtime/Native/OS/Linux/: Clock.cpp  FS.cpp  Futex.cpp  IO.cpp  Intercepts.cpp  MM.cpp  Net.cpp  Process.cpp  Run.cpp  Run.h  Sys.cpp  SystemCall.cpp  SystemCallABI.h  Thread.cpp
remill/tools/klee/runtime/Native/OS/Linux/Arch/: AArch64.cpp  X86.cpp
remill/tools/klee/runtime/POSIX/: fd.c  fd.h  fd_64.c  fd_init.c  posix.c
remill/tools/klee/runtime/Runtest/: CMakeLists.txt  intrinsics.c
remill/tools/klee/runtime/klee-libc/: klee-libc.c  klee-libc.h  memchr.c  mempcpy.c  strlen.c  strrchr.c  strtol.c  strtoul.c
remill/tools/klee/scripts/: locate_traces.py
remill/tools/lift/: CMakeLists.txt
